# GridTrace

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _git_push.py  docker-compose.yml  pyproject.toml
.codebuddy/plans/: gridtrace-cleanup-and-readme-overhaul_04712fa5.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  integration.yml  publish.yml
api/: __init__.py  deps.py  server.py
api/routes/: chat.py  health.py  knowledge.py
api/schemas/: __init__.py  chat.py  knowledge.py
data/eval/: eval_v3.json
data/faq/: OpsWarden_FAQ.md
docker/: Dockerfile.backend  Dockerfile.frontend  init.sql
docs/: algorithm.md  api_reference.md  architecture.md  eval_report.md
gridtrace/: __init__.py  generator.py  pipeline.py  quantizer.py  retriever.py
gridtrace/eval/: metrics.py
gridtrace/loaders/: __init__.py
gridtrace/storage/: __init__.py  postgres.py
gridtrace/utils/: config.py  hashing.py
scripts/: ingest_docs.py  reset_kb.py  run_eval.py
src/gridtrace/: embedder.py
src/gridtrace/eval/: __init__.py  engine.py
src/gridtrace/storage/: _types.py  memory.py  sqlite.py
src/gridtrace/utils/: __init__.py  logging.py
tests/: conftest.py
tests/eval/: test_hit_at_k.py  test_unlearning.py
tests/integration/: test_api.py
tests/unit/: test_embedder.py  test_pipeline.py  test_quantizer.py  test_retriever.py  test_storage.py
