[project]
name = "GridTrace"
version = "0.1.0"
description = "Quantized Unlearning-Aware Retrieval & Knowledge — grid-quantized anchor based RAG with exact unlearning."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "GridTrace Maintainers" },
]
keywords = ["rag", "retrieval", "vector-search", "pgvector", "unlearning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "numpy>=1.26",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "httpx>=0.27",
    "types-requests",
]
embed = [
    "sentence-transformers>=3.0",
    "torch>=2.1",
]
agent = [
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
]

[project.urls]
Homepage = "https://github.com/guts-yang/GridTrace"
Issues = "https://github.com/guts-yang/GridTrace/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gridtrace", "api"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ASYNC"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "torch.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: requires PostgreSQL with pgvector",
    "slow: long-running evaluation tests",
]

[tool.coverage.run]
source = ["gridtrace"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
